Correct /index.html for subdirectories on S3
S3 server may not error on serving a directory. Adjust /index.html to
include trailing slash on directory links.

--- a/quetz/templates/channeldata-index.html.j2
+++ b/quetz/templates/channeldata-index.html.j2
@@ -68,7 +68,7 @@
 <body>
   <h2>{{ title }}</h2>
   <h3><a href="channeldata.json">channeldata.json</a></h3>
-  {% for subdir in subdirs %}<a href="{{ subdir }}">{{ subdir }}</a>&nbsp;&nbsp;&nbsp;{% endfor %}
+  {% for subdir in subdirs %}<a href="{{ subdir }}/">{{ subdir }}</a>&nbsp;&nbsp;&nbsp;{% endfor %}
   <table>
     <tr>
       <th style="padding-right:18px;">Package</th>
